--- a/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
+++ b/SailScores.Web/Views/Race/_scoreEntryPartial.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="float-right ml-auto d-flex">
             <div>
-                <select class="select-code form-control form-control-sm" onchange="window.SailScores.calculatePlaces()">
+                <select class="select-code form-control form-control-sm">
                     <option value="No Code">No Code</option>
                     @foreach (var code in Model.ScoreCodeOptions)
                     {
@@ -28,12 +28,11 @@
                        type="text" pattern="[0-9]+([\.,][0-9]+)?"
                        placeholder="place" />
             </div>
-            <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
-            <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
+            <button class="btn btn-light move-up" type="button"><span class="fa fa-angle-up"></span></button>
+            <button class="btn btn-light move-down" type="button"><span class="fa fa-angle-down"></span></button>
             &ensp;
             <button class="btn btn-light delete-button" type="button" data-toggle="modal"
-                    data-target="#deleteConfirm"
-                    onclick="window.SailScores.confirmDelete()">
+                    data-target="#deleteConfirm">
                 <span class="far fa-trash-alt text-danger"></span>
             </button>
         </div>
