--- a/SailScores.Web/Views/Race/_competitorCreate.cshtml
+++ b/SailScores.Web/Views/Race/_competitorCreate.cshtml
@@ -11,7 +11,7 @@
             </div>
             <div id="compCreateAlert" class="alert alert-danger alert-dismissible collapse" role="alert">
                 <strong>Oops.</strong> Creating the competitor failed. Are the fields all filled in?
-                <button type="button" class="close" onclick="window.SailScores.hideAlert()" aria-label="Close">
+                <button type="button" id="closebutton" class="close" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
