--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -61,7 +61,7 @@
                     {
                         <option selected="selected">Select a fleet...</option>
                     }
-                    @foreach (var fleet in Model.FleetOptions)
+                    @foreach (var fleet in Model.FleetOptions.OrderBy(f => f.Name))
                     {
                         @if (Model.FleetOptions.Count == 1)
                         {
@@ -282,9 +282,7 @@
                 <input id="submitButton" type="submit" value="Create" class="btn btn-primary btn-block" disabled="disabled" />
             </div>
             <div class="col-md-3">
-                <a asp-controller="Admin"
-                   asp-action="Index"
-                   asp-fragment="races"
+                <a href="@(ViewData["ReturnUrl"] ?? Url.Action("Index", "Admin"))"
                    class="btn btn-outline-primary btn-block">Cancel</a>
             </div>
         </div>
