News notes for azure

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,12 +6,17 @@
     @ViewData["Title"]
 </h3>
 <h3>
-    March 7th, 2020
+    March 14th, 2020
 </h3>
-<h5>Update</h5>
+<h5>To the cloud...</h5>
 <p>
-    For the next few months updates may slow down. We're working on phone apps to support
-    offline score entry and integrate with this site.
+    Along with changing SailScores' hosting service, a few updates have been made to improve
+    site performance. We're still finding some places that can be sped up and expect
+    to continue making tweaks to help the site's responsiveness.
+</p>
+<p>
+    But for the next few months feature updates will slow down. We're working on a mobile app to support
+    offline score entry integrated with this site.
 </p>
 <h3>
     January 23rd, 2020
