WIP: better version
Thank you scott hanselman

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -71,5 +71,9 @@ Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">j
 <address>
     <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
 </address>
-<br/>
+<br />
+
+<a href="https://github.com/shanselman/hanselminutes-core/commit/@Model.GitHash">@Model.ShortGitHash</a>
+  via build <a href="https://dev.azure.com/hanselman/Hanselminutes%20Website/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
+
 <p><small><code>v@(Model.Version)</code></small></p>
