links in version to source

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -73,7 +73,11 @@ Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">j
 </address>
 <br />
 
-<a href="https://github.com/shanselman/hanselminutes-core/commit/@Model.GitHash">@Model.ShortGitHash</a>
-  via build <a href="https://dev.azure.com/hanselman/Hanselminutes%20Website/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
-
-<p><small><code>v@(Model.Version)</code></small></p>
+<p>
+    <small>
+        <code>
+            src <a href="https://github.com/jbfraser1/sailscores/commit/@Model.GitHash">@Model.ShortGitHash</a>
+            build <a href="https://github.com/jbfraser1/sailscores/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
+        </code>
+    </small>
+</p>
