--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -77,7 +77,7 @@ Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">j
     <small>
         <code>
             src <a href="https://github.com/jbfraser1/sailscores/commit/@Model.GitHash">@Model.ShortGitHash</a>
-            build <a href="https://github.com/jbfraser1/sailscores/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
+            build <a href="https://dev.azure.com/SailScores/SailScoresWebApp/_build/results?buildId=@Model.BuildId&view=results">@Model.BuildNumber</a>
         </code>
     </small>
 </p>
