WIP: Various Fixes

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -62,7 +62,7 @@
     <div class="col-sm-4">
         <a asp-controller="Admin"
            asp-action="Edit"
-           class="btn btn-outline-primary btn-sm">@localizer["Edit"]</a>
+           class="btn btn-outline-primary btn-sm">@localizer["Edit Club Info"]</a>
     </div>
 </div>
 <hr />
