--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -13,7 +13,7 @@
 <h4>Series</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-4 col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
