--- a/SailScores.Web/Views/Shared/_RegattaSelectorView.cshtml
+++ b/SailScores.Web/Views/Shared/_RegattaSelectorView.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http
 @model SailScores.Web.Models.SailScores.RegattaSelectorModel
     <select id="regattaSelect" hidden asp-for="SelectedRegattaName" class="form-control"
+        aria-label="Select Regatta"
             onchange="window.location.href =
         '@string.Format("{0}://{1}{2}/", Context.Request.Scheme, Context.Request.Host, Url.Content("~"))' + this.value;"
             autocomplete="off">
