Exclude series from comp stats option

--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -4,7 +4,7 @@
 
 @inject IStringLocalizer<SharedResource> localizer
 
-@model ClubItemViewModel<CompetitorViewModel>
+@model ClubItemViewModel<CompetitorStatsViewModel>
 
 @{
     ViewBag.Title = "Details";
