--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -92,6 +92,12 @@
                                 </select>
                                 <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
                             </div>
+                            <div class="form-group">
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="ExcludeFromCompetitorStats" />
+                                    <label class="form-check-label"> Exclude from competitor summary statistics</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
